Implemented backend support for snapshots in PD service (#386)
* feat(parallels): implement snapshot management functions including create, delete, list, and switch

* feat: Implemented comprehensive virtual machine (#378)

snapshot management endpoints.


* feat(snapshot): refactor snapshot creation and response handling; remove unused snapshot functions

* feat: Implemented comprehensive Parallels Desktop virtual machine management API which is Deletes a snapshot of a virtual machine

* feat: Implemented API which Reverts a virtual machine to a snapshot

* feat: Add comprehensive API for snapshot list.

* feat: Implemented API which  deletes all snapshots of a  virtual machine

* Refactor snapshot endpoints and update documentation

- Updated the DeleteSnapshot function to specify the HTTP method as DELETE in the router annotation.
- Changed the ListSnapshot function to specify the HTTP method as GET for the endpoint /v1/machines/{id}/snapshots/.
- Modified the API documentation to reflect the changes in the snapshot endpoints, including updating descriptions and summaries.
- Removed the SwitchSnapshotRequest model and its associated endpoint from the API documentation.
- Adjusted the ListSnapshots function in the ParallelsService to parse snapshot data from a map structure and convert it into a slice for response.

* Refactor snapshot endpoints: Update DeleteSnapshot and DeleteAllSnapshots handlers, modify Swagger documentation for snapshot listing and creation endpoints

* Refactor Data structure and remove VirtualMachineSnapshot model

- Updated the Data struct in main.go to remove the VMSnapshots field, simplifying the structure.
- Deleted the VirtualMachineSnapshot model and associated methods in snapshots.go, as they are no longer needed.

* fix: update snapshots endpoint to remove snapshot_id from path

* feat: Removed duplicate switch snapshot claim and updated status code correctly

---------
