# src/models/snapshot.go
@@ -1,79 +1,34 @@
 package models
 
-import (
-	"github.com/Parallels/prl-devops-service/errors"
-)
-
 type CreateSnapShotRequest struct {
-	VMId                string `json:"vm_id"`
-	VMName              string `json:"vm_name"`
 	SnapshotName        string `json:"snapshot_name,omitempty"`
 	SnapshotDescription string `json:"snapshot_description,omitempty"`
 }
 
-func (r *CreateSnapShotRequest) Validate() error {
-
-	if r.VMId == "" && r.VMName == "" {
-		return errors.New("vm_id and vm_name cannot be empty")
-	}
-
-	return nil
+type CreateSnapShotResponse struct {
+	SnapshotName string `json:"snapshot_name,omitempty"`
+	SnapshotId   string `json:"snapshot_id,omitempty"`
 }
 
 type DeleteSnapshotRequest struct {
-	VMId      string `json:"vm_id"`
-	VMName    string `json:"vm_name"`
-	ChildName string `json:"child_name,omitempty"`
-}
-
-func (r *DeleteSnapshotRequest) Validate() error {
-
-	if r.VMId == "" && r.VMName == "" {
-		return errors.New("vm_id and vm_name cannot be empty")
-	}
-
-	return nil
+	DeleteChildren bool `json:"delete_children,omitempty"`
 }
 
 type ListSnapshotRequest struct {
-	VMId   string `json:"vm_id"`
-	VMName string `json:"vm_name"`
+}
+type Snapshot struct {
+	ID      string `json:"id,omitempty"`
+	Name    string `json:"name"`
+	Date    string `json:"date"`
+	State   string `json:"state"`
+	Current bool   `json:"current"`
+	Parent  string `json:"parent"`
 }
 
-func (r *ListSnapshotRequest) Validate() error {
-
-	if r.VMId == "" && r.VMName == "" {
-		return errors.New("vm_id and vm_name cannot be empty")
-	}
-
-	return nil
+type ListSnapshotResponse struct {
+	Snapshots []Snapshot `json:"snapshots,omitempty"`
 }
 
 type RevertSnapshotRequest struct {
-	VMId   string `json:"vm_id"`
-	VMName string `json:"vm_name"`
-}
-
-func (r *RevertSnapshotRequest) Validate() error {
-
-	if r.VMId == "" && r.VMName == "" {
-		return errors.New("vm_id and vm_name cannot be empty")
-	}
-
-	return nil
-}
-
-type SwitchSnapshotRequest struct {
-	VMId       string `json:"vm_id"`
-	VMName     string `json:"vm_name"`
-	SkipResume bool   `json:"skip_resume,omitempty"`
-}
-
-func (r *SwitchSnapshotRequest) Validate() error {
-
-	if r.VMId == "" && r.VMName == "" {
-		return errors.New("vm_id and vm_name cannot be empty")
-	}
-
-	return nil
+	SkipResume bool `json:"skip_resume,omitempty"`
 }
